--- a/assets/scss/footer/_footer.scss
+++ b/assets/scss/footer/_footer.scss
@@ -52,6 +52,10 @@
   color: #637588;
 }
 
+.footer__copy span:nth-of-type(2) {
+  margin-bottom: 10px;
+}
+
 .footer__copy {
   margin-top: 39px;
   padding-bottom: 70px;
@@ -61,7 +65,20 @@
   font-weight: 700;
   font-family: "Roboto";
   text-align: center;
+  @include lg {
+    margin-top: 40px;
+    padding-bottom: 71px;
+    font-size: 16px;
+    letter-spacing: 0.05em;
+    line-height: 18px;
+    color: white;
+    font-weight: 700;
+    font-family: "Roboto";
+    text-align: center;
+  }
   @include md {
+    line-height: 19px;
+    margin-top: 39px;
     padding-bottom: 70px;
   }
 }
