--- a/assets/scss/header/_header.scss
+++ b/assets/scss/header/_header.scss
@@ -7,7 +7,7 @@
   background-position: 50% 50%;
   background-size: cover;
   @include lg {
-    height: 766px;
+    height: 100vh;
   }
 
   @include md {
@@ -158,6 +158,10 @@ h1 {
   padding: 0 10px;
   letter-spacing: 0.1em;
   font-size: 1.125rem;
+  @include md {
+    padding: 10px 20px;
+    display: block;
+  }
 }
 
 .header-logo {
@@ -202,18 +206,18 @@ h1 {
       background-color: rgba(68, 89, 110, 0.9);
       padding-top: 0px;
       padding-left: 0px;
-      margin: 0 0 0 407px;
+      right: 30px;
       box-shadow: 3px 3px 30px 3px;
-      top: 100px;
+      top: 100%;
+      text-align: right;
     }
 
     @include sm {
-      margin: 0 0 0 216px;
     }
   }
   &__item {
     @include md {
-      margin: 20px 30px;
+      margin: 20px 10px;
     }
   }
   &__link {
