--- a/assets/scss/main/_btn.scss
+++ b/assets/scss/main/_btn.scss
@@ -10,11 +10,11 @@
   font-weight: 400;
   font-family: "Roboto";
   @include lg {
-    height: 53px;
+    height: 56px;
   }
   @include md {
     width: 346px;
-    height: 53px;
+    height: 56px;
   }
   @include sm {
     width: calc(100% - 3px);
@@ -49,11 +49,17 @@
   border: 2px solid #ffffff;
   background-color: #ffffff1a;
   @include lg {
+    display: grid;
     width: 196px;
-    height: 44px;
+    height: 32px;
+    padding-top: 12px;
+    align-items: start;
   }
   @include md {
+    display: grid;
+    padding-top: 0;
     width: 166px;
     height: 34px;
+    align-items: center;
   }
 }
