--- a/assets/scss/main/_form.scss
+++ b/assets/scss/main/_form.scss
@@ -28,6 +28,7 @@
     font-size: 1.125rem;
     color: #ffffff;
     font-weight: 400;
+    padding-top: 2px;
     font-family: "Roboto";
     width: 304px;
     height: 60px;
@@ -36,8 +37,8 @@
     width: 100%;
     height: 60px;
     font-size: 18px;
-    padding-bottom: 1px;
-    padding-left: 4px;
+    padding-bottom: 3px;
+    padding-left: 6px;
   }
   @include sm {
     padding-top: 2px;
@@ -94,6 +95,10 @@
   }
 }
 
+input::placeholder {
+  color: #637588;
+}
+
 .form-item {
   @include lg {
     width: 304px;
@@ -109,7 +114,6 @@
 }
 
 .form-item__input {
-  padding-top: 2px;
   padding-left: 30px;
   box-sizing: border-box;
   width: 100%;
@@ -139,6 +143,7 @@
 
   @include md {
     width: 100%;
+    padding-top: 2px;
     font-size: 18px;
   }
 }
