--- a/assets/scss/main/_posts.scss
+++ b/assets/scss/main/_posts.scss
@@ -52,7 +52,7 @@
     height: 53px;
     font-size: 1.5rem;
     letter-spacing: 0.1em;
-    padding-bottom: 65px;
+    padding-bottom: 64px;
     line-height: 1.2em;
   }
   @include sm {
@@ -60,6 +60,7 @@
     width: 100%;
     height: 64px;
     text-align: center;
+    margin-bottom: 1px;
   }
 }
 
@@ -102,6 +103,9 @@
   @include md {
     right: -10px;
   }
+  @include sm {
+    display: none;
+  }
 }
 
 .about__content p:first-of-type {
@@ -109,7 +113,7 @@
 }
 
 .post-item {
-  background-color: #eeeeee;
+  background-color: #f2f2f2;
   height: 541px;
   transition: background-color 0.5s;
   @include lg {
@@ -218,9 +222,13 @@ img {
 .posts .btn--primary {
   width: 350px;
   height: 60px;
+  @include lg {
+    padding-bottom: 2px;
+  }
 
   @include md {
     height: 60px;
+    padding-top: 2px
   }
 
   @include sm {
