--- a/assets/scss/header/_header.scss
+++ b/assets/scss/header/_header.scss
@@ -1,35 +1,42 @@
 @import "../presets/mixins-media";
 
 .header {
-  display: grid;
   position: relative;
-  background-position: 50% 50%;
-  background-size: cover;
+
+  display: grid;
+
   min-height: 100vh;
 
+  background-position: 50% 50%;
+  background-size: cover;
+
   &-logo {
-    font-size: 1.5rem;
     margin-top: -1px;
+
     letter-spacing: 0.22em;
+
+    font-size: 1.5rem;
 
     &__link {
       display: block;
     }
 
     &__accent {
-      padding: 13px 1px 13px 5px;
       margin-right: -0.31em;
+      padding: 13px 1px 13px 5px;
+
       border: 3px solid #d53d27;
     }
   }
 
   &-overlay {
     position: absolute;
-    opacity: 0.8;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+
+    opacity: 0.8;
     background-color: #2d3651;
   }
 
@@ -38,95 +45,116 @@
     &__title {
       @include lg-md {
         margin-top: 20px;
-        font-size: 2.5rem;
-        letter-spacing: 0.08em;
-        color: #ffffff;
-        font-weight: 300;
-        font-family: "Roboto Slab";
-        text-align: center;
-      }
 
+        text-align: center;
+        letter-spacing: 0.08em;
+
+        color: #ffffff;
+
+        font-family: "Roboto Slab";
+        font-size: 2.5rem;
+        font-weight: 300;
+      }
       @include md-sm {
         margin-top: 20px;
-        font-size: 1.875rem;
         margin-bottom: 34px;
-      }
 
-      @include sm {
-        margin-top: 20px;
-        max-width: 330px;
         font-size: 1.875rem;
-        letter-spacing: 0.08em;
+      }
+      @include sm {
+        max-width: 330px;
+        margin-top: 20px;
         margin-top: 19px;
-        line-height: 36px;
         margin-bottom: 33px;
+
+        letter-spacing: 0.08em;
+
+        font-size: 1.875rem;
+        line-height: 36px;
       }
     }
 
     &__actions {
-      font-size: 18px;
-      letter-spacing: 2px;
-      color: #ffffff;
-      font-weight: 400;
-      font-family: "Roboto";
-      display: grid;
       z-index: 1;
+
+      display: grid;
       justify-content: center;
-      grid-template-areas: "a a";
+
       margin-left: 7px;
-      grid-column-gap: 20px;
       padding-bottom: 3px;
+
+      letter-spacing: 2px;
+
+      color: #ffffff;
+
+      font-family: "Roboto";
+      font-size: 18px;
+      font-weight: 400;
+
+      grid-column-gap: 20px;
+      grid-template-areas: "a a";
       @include lg-md {
-        font-size: 16px;
-        padding-left: 8px;
-        letter-spacing: 2px;
-        color: #ffffff;
-        font-weight: 400;
-        font-family: "Roboto";
-        margin-left: 0;
-        grid-column-gap: 20px;
         margin-bottom: 16px;
+        margin-left: 0;
+        padding-left: 8px;
+
+        letter-spacing: 2px;
+
+        color: #ffffff;
+
+        font-family: "Roboto";
+        font-size: 16px;
+        font-weight: 400;
+
+        grid-column-gap: 20px;
       }
       @include md-sm {
-        margin-left: 9px;
-        font-size: 16px;
-        letter-spacing: 2px;
-        color: #ffffff;
-        font-weight: 400;
-        font-family: "Roboto";
         margin-bottom: 15px;
+        margin-left: 9px;
+
+        letter-spacing: 2px;
+
+        color: #ffffff;
+
+        font-family: "Roboto";
+        font-size: 16px;
+        font-weight: 400;
       }
       @include sm {
-        margin-left: 8px;
         margin-bottom: 15px;
-        font-size: 16px;
+        margin-left: 8px;
+
         letter-spacing: 2px;
+
+        font-size: 16px;
+
+        grid-template-areas: "a"
+        "a";
         row-gap: 20px;
-        grid-template-areas:
-          "a"
-          "a";
       }
     }
 
     &__container {
-      display: grid;
-      text-align: center;
       z-index: 1;
+
+      display: grid;
+
       max-width: 1340px;
-      padding: 150px 0;
       margin: auto;
+      padding: 150px 0;
       padding-right: 7px;
+
+      text-align: center;
+
       grid-row-gap: 50px;
       @include lg-md {
         grid-row-gap: 39px;
       }
-
       @include md-sm {
         grid-row-gap: 0;
       }
-
       @include sm {
-        grid-row-gap: 0px;
+        grid-row-gap: 0;
       }
     }
   }
@@ -137,106 +165,76 @@
     top: 0;
     right: 0;
     left: 0;
+
     @include md {
       max-width: 768px;
       height: 100px;
+
       background-color: rgba(68, 89, 110, 0.25);
-      box-shadow: 0px 0px 25px 5px black;
+      box-shadow: 0 0 25px 5px black;
     }
 
     &__container {
       z-index: 2;
+
       display: grid;
+
+      box-sizing: border-box;
       max-width: 1340px;
       margin: auto;
-      grid-template-columns: auto 1fr;
-      padding: 38px 20px 0 20px;;
-      box-sizing: border-box;
+      padding: 38px 20px 0 20px;
+
+      grid-template-columns: auto 1fr;;
     }
   }
 
   &-navbar {
-    &__list {
-      display: grid;
-      margin: 0 -10px 0 0;
-      padding-top: 2px;
-      gap: 20px;
-      letter-spacing: 1px;
-      font-size: 18px;
-      list-style: none;
-      justify-content: end;
-      grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
-
-      @include lg-md {
-        margin-right: -10px;
-      }
-
-      @include md {
-        display: none;
-        position: absolute;
-        background-color: rgba(68, 89, 110, 0.9);
-        padding-top: 0px;
-        padding-left: 0px;
-        right: 30px;
-        box-shadow: 3px 3px 30px 3px;
-        top: 100%;
-        text-align: right;
-      }
-    }
-
-    &__item {
-      @include md {
-        margin: 20px 10px;
-      }
-    }
-
-    &__link {
-      padding: 0 10px;
-      letter-spacing: 0.1em;
-      font-size: 1.125rem;
-      @include md {
-        padding: 10px 20px;
-        display: block;
-      }
-    }
-
     @include md {
       display: grid;
       justify-content: end;
       &__btn {
-        width: 30px;
-        margin-top: 1px;
-        height: 22.5px;
         position: relative;
-        transform: rotate(0deg);
-        transition: 0.5s ease-in-out;
+
+        width: 30px;
+        height: 22.5px;
+        margin-top: 1px;
+
         cursor: pointer;
+        transition: 0.5s ease-in-out;
+        transform: rotate(0deg);
 
         &-row {
-          display: block;
           position: absolute;
-          height: 3px;
+
+          display: block;
+
           width: 50%;
-          background-color: #ffffff;
-          opacity: 1;
-          transform: rotate(0deg);
+          height: 3px;
+
           transition: 0.25s ease-in-out;
+          transform: rotate(0deg);
+
+          opacity: 1;
+          background-color: #ffffff;
 
           &:nth-child(even) {
             left: 50%;
+
             border-radius: 0 3px 3px 0;
           }
           &:nth-child(even) {
             left: 50%;
+
             border-radius: 0 3px 3px 0;
           }
           &:nth-child(odd) {
-            left: 0px;
+            left: 0;
+
             border-radius: 3px 0 0 3px;
           }
           &:nth-child(1),
           &:nth-child(2) {
-            top: 0px;
+            top: 0;
           }
 
           &:nth-child(3),
@@ -261,35 +259,91 @@
           }
 
           &:nth-child(1) {
-            left: 2.5px;
             top: 3.5px;
+            left: 2.5px;
           }
 
           &:nth-child(2) {
-            left: calc(50% - 2.5px);
             top: 3.5px;
+            left: calc(50% - 2.5px);
           }
 
           &:nth-child(3) {
             left: -50%;
+
             opacity: 0;
           }
 
           &:nth-child(4) {
             left: 100%;
+
             opacity: 0;
           }
 
           &:nth-child(5) {
-            left: 2.5px;
             top: 14.5px;
+            left: 2.5px;
           }
 
           &:nth-child(6) {
-            left: calc(50% - 2.5px);
             top: 14.5px;
+            left: calc(50% - 2.5px);
           }
         }
+      }
+    }
+    &__list {
+      display: grid;
+      justify-content: end;
+
+      margin: 0 -10px 0 0;
+      padding-top: 2px;
+
+      list-style: none;
+
+      letter-spacing: 1px;
+
+      font-size: 18px;
+
+      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
+      @include lg-md {
+        margin-right: -10px;
+      }
+      @include md {
+        position: absolute;
+        top: 100%;
+        right: 30px;
+
+        display: none;
+
+        padding-top: 0;
+        padding-left: 0;
+
+        text-align: right;
+
+        background-color: rgba(68, 89, 110, 0.9);
+        box-shadow: 3px 3px 30px 3px;
+      }
+    }
+
+    &__item {
+      @include md {
+        margin: 20px 10px;
+      }
+    }
+
+    &__link {
+      padding: 0 10px;
+
+      letter-spacing: 0.1em;
+
+      font-size: 1.125rem;
+
+      @include md {
+        display: block;
+
+        padding: 10px 20px;
       }
     }
   }
