--- a/assets/scss/main/_skills.scss
+++ b/assets/scss/main/_skills.scss
@@ -9,50 +9,44 @@
 
   &__container {
     display: grid;
+
     grid-column-gap: 10px;
     grid-row-gap: 10px;
-
     @include lg-min {
-      grid-template-areas:
-        "a1 a1 a2 a3"
-        "a4 a5 a5 a6"
-        "a7 a8 a9 a6";
+      grid-template-areas: "a1 a1 a2 a3"
+      "a4 a5 a5 a6"
+      "a7 a8 a9 a6";
       grid-template-columns: repeat(4, 1fr);
     }
-
     @include lg-md {
-      grid-template-areas:
-        "a1 a1 a2"
-        "a3 a4 a4"
-        "a5 a5 a6"
-        "a7 a8 a6"
-        "a7 a9 a9";
+      grid-template-areas: "a1 a1 a2"
+      "a3 a4 a4"
+      "a5 a5 a6"
+      "a7 a8 a6"
+      "a7 a9 a9";
       grid-template-columns: repeat(3, 1fr);
     }
     @include md-sm {
-      grid-template-areas:
-        "a1 a2"
-        "a3 a2"
-        "a4 a4"
-        "a5 a6"
-        "a5 a7"
-        "a8 a9";
+      grid-template-areas: "a1 a2"
+      "a3 a2"
+      "a4 a4"
+      "a5 a6"
+      "a5 a7"
+      "a8 a9";
       grid-template-columns: repeat(2, 1fr);
     }
-
     @include sm {
-      grid-template-areas:
-        "a1"
-        "a2"
-        "a3"
-        "a4"
-        "a5"
-        "a6"
-        "a7"
-        "a8"
-        "a9";
-      grid-template-columns: 1fr;
       grid-row-gap: 20px;
+      grid-template-areas: "a1"
+      "a2"
+      "a3"
+      "a4"
+      "a5"
+      "a6"
+      "a7"
+      "a8"
+      "a9";
+      grid-template-columns: 1fr;
     }
 
     @media (min-height: 691px) {
@@ -65,21 +59,24 @@
 
   &__actions {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+
     padding-top: 20px;
     padding-bottom: 20px;
+
     @include lg-min {
-      padding-left: 0px;
+      padding-left: 0;
     }
     @include md-sm {
       padding-top: 20px;
     }
     @include sm {
       display: block;
+
       padding-top: 20px;
-      padding-left: 0px;
-      padding-bottom: 0px;
+      padding-bottom: 0;
+      padding-left: 0;
     }
   }
 
@@ -93,10 +90,13 @@
 
 .skill-item {
   position: relative;
+
   display: grid;
   overflow: hidden;
   align-items: center;
+
   padding: 20px;
+
   justify-items: center;
 
   &:hover &__overlay {
@@ -104,12 +104,14 @@
     background-color: #2d3651;
   }
   &__image {
-    transition: 0.5s;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+
+    transition: 0.5s;
+
     background-position: 50% 50%;
     background-size: cover;
   }
@@ -128,7 +130,9 @@
     right: 0;
     bottom: 0;
     left: 0;
+
     transition: opacity 0.5s;
+
     opacity: 0.8;
     background-color: #2d3651;
   }
@@ -140,28 +144,35 @@
     right: 0;
     bottom: 0;
     left: 0;
+
     margin: 0;
   }
 
   &__link {
     display: grid;
-    height: 100%;
-    justify-content: center;
     align-items: center;
-    font-size: 20px;
-    letter-spacing: 2px;
-    color: #ffffff;
-    font-weight: 700;
-    font-family: "Roboto";
-    text-align: center;
+    justify-content: center;
+
+    height: 100%;
+
     transition: background-color 0.5s, border-color 0.5s, color 0.5s;
+    text-align: center;
+    letter-spacing: 2px;
+
+    color: #ffffff;
+
+    font-family: "Roboto";
+    font-size: 20px;
+    font-weight: 700;
 
     @include md-sm {
       letter-spacing: 0.1em;
+
       font-size: 1.125rem;
     }
     @include sm {
       letter-spacing: 0.1em;
+
       font-size: 1.125rem;
     }
   }
